ags (0.8.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented MIDI export

ags (0.7.135)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented Lv2 program interface
	* implemented ags-play-dssi and ags-play-lv2 recall
	* implemented AgsLiveDssiBridge and AgsLiveLv2Bridge
	* fixed non-interleave lv2 audio data processing
	* support NULL input

ags (0.7.134)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* merge stable
	* ?

ags (0.7.133)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing reset of connection editor field of machine
	* fixed wrong subtract one of audio channels in bulk connection
	* fixed configuration to clear old config
	* fixed soundcard editor pcm info fails if soundcard busy, use default values

ags (0.7.132)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented seperator within AgsLine and AgsEffectLine
	* implemented seemless mode of AgsDial
	* improved theme, dial style to have dark background

ags (0.7.131)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented output listing editor to assign soundcard
	* improved theme and disable option

ags (0.7.130)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved stability

ags (0.7.129)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags-simple.xsl
	* improved mutices in ags_pad_play() and ags_line_channel_done_callback()
	* fixed missing persisting of machine name

ags (0.7.128)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsLv2OptionManager
	* implemented passing options for AgsRecallLv2Run
	* modified UI to show visualization widgets for plugin output ports
	* modified ags-peak, ags-volume and ags-mute recalls to use float ports
	* disabled loading automation of output ports
	* fixed buggy code in ags_machine_selector_remove_index() by a work-around has a need for refactoring
