@@ -1115,13 +1115,9 @@ ags_menu_bar_midi_export_track_callback(GtkWidget *menu_item, AgsMenuBar *menu_b
 }
 
 void
-ags_menu_bar_midi_export_all_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar)
-{
-}
-
-void
 ags_menu_bar_midi_playback_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar)
 {
+  //TODO:JK: implement me
 }
 
 void
