@@ -54,7 +54,6 @@ void ags_menu_bar_preferences_callback(GtkWidget *menu_item, AgsMenuBar *menu_ba
 
 void ags_menu_bar_midi_import_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar);
 void ags_menu_bar_midi_export_track_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar);
-void ags_menu_bar_midi_export_all_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar);
 void ags_menu_bar_midi_playback_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar);
 
 void ags_menu_bar_about_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar);
